- Added an option to have Chummer automatically set the lossy compression quality for mugshots in save files instead of using the same, manually defined setting for all images. Using this automatic setting, larger images will be saved with lower Jpeg quality settings because Jpeg artifacts will be less visible in them, while smaller images get saved with higher quality settings.
- If the prompt asking the user if they wish to automatically apply a Chummer updater is dismissed, it no longer re-appears until the user has closed and later re-opened Chummer.
- Non-PDF files can no longer be linked in as a sourcebook's PDF file.
- Fixed a crash when taking the Apprentice quality.
- Qualities can no longer mysteriously disappear but still leave behind their bonuses when changing priorities.
- Settings in the Character Settings menu are now properly updated when the settings selection is changed. Fixes #4620.
- Encumbrance penalties and custom improvements can now drop attribute values to zero. Having all limbs replaced with cyberlimbs with attribute values of zero can also drop attribute values to zero now as well.
- Cyberarms and modular shoulder arms can now interact properly with Shiva Arms 2.
- Encumbrance penalties to Agility that are greater than the attribute's base value no longer artificially lower the character's average Agility when they also have cyberlimbs. Fixes #4625.
- Fixed Vehicle-mounted Weapons that use melee autosofts not picking up the proper autosoft rating.
- Fixed character types (NPCs, critters) that are given a skill on creation incorrectly being provided with an empty Specialisation
- Dealer Connection's discount is now properly shown and processed for non-drones in the vehicle selection screen. Fixes #4616.
- All items with names and/or categories now output the English versions of their names when exporting. Previously, cyberware, bioware, vehicles, vehicle mods, weapon accessories, and weapon mounts did not do this.